--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <section class="hero">
-    	<div id="clickdiv">Click here ↓</div>
+    	<div id="clickdiv"><p>Click here ↓</p></div>
       <img src="./src/scuffy.jpg">
     </section>
 
