--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
-  <title>Happy Birthday Dad</title>
+  <title>Happy Birthday Dad!!</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -55,7 +55,6 @@
 		audio.currentTime = 0;
 	}
 }
-
 
  function animate() {
   	hue++;
